hphp/hack/test/typecheck/function_pointer/class_meth_trait__CLASS__.php.exp
File "class_meth_trait__CLASS__.php", line 7, characters 5-14:
`class_meth` with `__CLASS__` in non-final classes is not allowed.
 (Naming[2114])
