hphp/hack/test/typecheck/function_pointer/class_meth_trait__CLASS__.php
<?hh

trait Foo {
  public static function bar(): void {}

  public function test(): void {
    class_meth(__CLASS__, 'bar');
  }
}
